manifests/simpleupdate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simpleupdate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleupdate
spec:
  template:
    spec:
      serviceAccountName: simpleupdate
      containers:
        - name: simpleupdate
          image: ghcr.io/sim1/simpleupdate
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 80
          readinessProbe:
            tcpSocket:
              port: 80
      volumes:
        - name: config
          configMap:
            name: simpleupdate-config
---
kind: Service
apiVersion: v1
metadata:
  name: simpleupdate
spec:
  ports:
    - port: 80
