manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simpleupdate
  annotations:
    cert-manager.io/cluster-issuer: $(SIMPLEUPDATE_CLUSTER_ISSUER)
spec:
  tls:
    - hosts:
        - "$(SIMPLEUPDATE_HOST)"
      secretName: simpleupdate-tls
  rules:
    - host: $(SIMPLEUPDATE_HOST)
      http:
        paths:
          - backend:
              serviceName: simpleupdate
              servicePort: 80
            path: /
